fix: resolve contrast issue

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,7 +48,7 @@
   --ifm-color-primary-lightest: #a16fe3;
   --ifm-color-content: #000c1d;
   --ifm-color-content-secondary: #af62f1;
-  --ifm-link-color: #af62f1;
+  --ifm-link-color: #a142f0;
   --ifm-color-primary-contrast-background: #f5edff;
   --ifm-color-primary-contrast-foreground: var(--ifm-color-primary-darkest);
   --ifm-highlight-color: #e59010;
